--- a/index.html
+++ b/index.html
@@ -188,14 +188,12 @@ Main Content section
             <div class="card-deck" id="testimonials">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet, mutat verterem mel eu. Eam nihil evertitur
-                            cotidieque ex. Vel in nisl impedit. Pro saperet veritus no, sea at dicat.</p>
-                        <p class="card-text">Lorem ipsum dolor sit amet, mutat verterem mel eu. Eam nihil evertitur
-                            cotidieque ex. Vel in nisl impedit. Pro saperet veritus no, sea at dicat.</p>
-                        <p class="cite">- So and So<br>
-                        Such and Such Company</p>
+                        <p class="card-text">I got to know Donovan while volunteering at the Stroke Support Station. And I have worked with him (seen him work) on several occasions. I found Donovan to be a strategic leader that knows how to articulate his thoughts well. A man with few words but a big heart and passion to serve.</p>
+                        <p class="cite">- <a href="https://sg.linkedin.com/in/danielyeosp">Daniel Yeo, Founder, Mindful Leadership Program</a></p>
                     </div>
                 </div>
+
+
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor sit amet, at est reque argumentum, vide viris eripuit
@@ -219,6 +217,7 @@ Main Content section
                 <!-- Membership -->
                 <h1 id="membership">Membership</h1>
                 <p><h3>Mensa Singapore</h3></p>
+                <p><img src="images/membershipcard.png" id="membershipcard"></p>
             </div>
 
             <div class="col-12 col-md-8">
@@ -226,7 +225,8 @@ Main Content section
                 <div class="row">
                     <div class="col">
                         <h1 id="personality-test">Myers–Briggs Type Indicator</h1>
-                        <p><h3>The Archetect - INTJ</h3></p>
+                        <p><h3>The Architect - INTJ</h3></p>
+                        <p><img src="images/architect.png"></p>
                     </div>
                     <div class="col">
                         <h1>DISC Profile</h1>
