--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@ Main Content section
                     </div>
                 </div>
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="images/sample2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-2"></a>Project 002</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -123,7 +123,7 @@ Main Content section
                     </div>
                 </div>
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="images/sample3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-3"></a>Project 003</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -131,7 +131,7 @@ Main Content section
                     </div>
                 </div>
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="images/sample4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-4"></a>Project 004</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
