--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,16 @@ Main Content section
                     </div>
                     <div class="col-12 col-sm-12 col-md-8 order-md-2" id="past-working-experience">
                         <h1>Working Experience</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.
+                        <h4>Centre Director</h4>
+                        <h5>Stroke Support Station</h5>
+                        <p>Assist in setting up Stroke Support Station (S3), Singapore’s first dedicated wellness centre to meet the gap in post stroke care of stroke survivors and their caregivers.<br>
+                        It partners organization of statutory and other volunteer welfare organizations caring for stroke survivors to offer a unique platform for providing innovative programs, support services, education and training for stroke survivors, caregivers, volunteers, relevant professionals, and the general public to enable stroke survivors achieving a better quality of life through step-down rehabilitation, social-emotional support, rebuilding confidence and independence..</p>
+                        <h4>General Manager</h4>
+                        <h5>Cheng Hong Welfare Service Society</h5>
+                        <p>A mission to straighten up the accounts in preparation for audit and renew the charity's IPC status turn into a fulfilling journey of setting up Pro Bono Afterlife Memorial Service, including structuring the process and funding it with a government administered trust fund.</p>
+                        <h4>Executive Director</h4>
+                        <h5>Action for Aids Singapore</h5>
+                        <p>An enriching journey of building up capacity and capability of the organisation, increasing trust of the statutory board and fundings to implement programme needed to make an impact. Collaborated with HPB to launch an island wide campaign for destigmatised HIV and reduce discrimination of people living with HIV. HIV was a taboo word, but now people can discuss about HIV openly without whispering.
                         </p>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 order-md-1" id="education">
