Edit Portfolio's projects' layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,12 +99,12 @@ Main Content section
 
 	<main>
 
-        <div class="container">
+        <div id="portfolio" class="container">
 
-        <a id="portfolio"></a>
+
          <h1>Portfolio</h1>
-
-
+        
+            <div class="container">
             <div class="card-deck">
                 <div class="card">
                     <img src="..." class="card-img-top" alt="...">
@@ -139,7 +139,7 @@ Main Content section
                     </div>
                 </div>
             </div>
-
+            </div>
         </div>
 	
     
