Edit page footers

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ Footer section
 
         <!-- Site Map Navigation -->
         <nav aria-label="Site Map navigation">
+        <div id="footer-sitemap" class="container-fluid">
             <section id="footer-sitemap" class="container">
                 <ul class="row ">
                     <li class="col-12 col-sm-6 col-md-4"><a href="index.html#top" class="sitemap-header">Home</a>
@@ -340,7 +341,7 @@ Footer section
                 </ul>
                  
             </section>
- 
+            </div>
         </nav>
  </div>
  
