--- a/index.html
+++ b/index.html
@@ -184,33 +184,43 @@ Main Content section
                 <!-- Testimonials -->
                 <h1>Testimonials</h1>
             </div>
+        </div>
+        <div class="row">
             <!-- Card component  -->
-            <div class="card-deck" id="testimonials">
+
+        <div class="card-deck " id="testimonials">
+            <div class="col-3">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">I got to know Donovan while volunteering at the Stroke Support Station. And I have worked with him (seen him work) on several occasions. I found Donovan to be a strategic leader that knows how to articulate his thoughts well. A man with few words but a big heart and passion to serve.</p>
-                        <p class="cite">- <a href="https://sg.linkedin.com/in/danielyeosp">Daniel Yeo, Founder, Mindful Leadership Program</a></p>
+                        <p class="cite">- <a href="https://sg.linkedin.com/in/danielyeosp" target="_blank">Daniel Yeo, Founder, Mindful Leadership Program</a></p>
                     </div>
                 </div>
-
+             </div>
+             <div class="col-6">
 
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet, at est reque argumentum, vide viris eripuit
-                            usu id. His dolor everti commune cu. Qui summo labitur no. Ei pro.</p>
-                        <p class="cite">-John Doe<br>
-                            <a href="#">Advent Company</a></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet, novum periculis intellegat ex eam, veniam
-                            option usu an. Vis reque assentior ad. Eu alia qualisque cum, an possim iriure.</p>
-                        <p class="cite">-Jane Doe<br>
-                        Acme Company</p>
+                        <p class="card-text">When I first joined Action for AIDS as a programme coordinator about 10 years ago, Mr. Donovan Lo was my immediate reporting superior. He was later promoted to become the executive director, it is commendable for Mr. Lo's way of interacting with the employees and the actions he takes to encourage our team's success.
+
+                        As a public health programmer specializing in partnerships and advocacy, I am continually amazed by the skills he possess to navigate in this complex field. He is always willing to mentor on questions related to programme design and the coordination and mobilisation of stakeholders.
+
+                        During his term as the executive director, Donovan was a key player in the success of the programmes, but his long-term planning have helped paved the way for the organisation to grow, and today we are continue to play an important role in the prevention of new HIV infection, and ultimately the ending of HIV transmission and AIDS in Singapore by 2030.</p>
+                        <p class="cite">-Avin Tan, Advocacy and partnerships manager, <br>
+                            <a href="https://afa.org.sg/" target="_blank">Action for AIDS</a></p>
                     </div>
                 </div>
             </div>
+            <div class="col-3">
+                <div class="card ">
+                    <div class="card-body">
+                        <p class="card-text">Mr Donovan Lo is an adviser for Lotus Eldercare and I have worked with Mr Lo on several projects to date. Mr Lo works well under pressure and is very approachable and relatable at work. Mr Lo works very well with his superiors and subordinate alike and is well liked by all.  He is very systemic and thorough in problem solving and has a deep sense of responsibility.</p>
+                        <p class="cite">-Dr Tan Jit Seng, Director,<br>
+                        <a href="https://www.lotuseldercare.com.sg/" target="_blank">Lotus Elder Care</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         <div class="row">
             <div class="col-12 col-md-4">
@@ -276,11 +286,11 @@ Footer section
                         <div class="col-12 col-sm-4">
                             <h1>Contact Information</h1>
                             <p class="contactitem">
-                                <i class="fa fa-phone" aria-hidden="true"></i><span class="sr-only">Mobile</span>
+                                <i class="fa fa-phone-square" aria-hidden="true"></i><span class="sr-only">Mobile</span>
                                 <my-contact number-user="+65 9683" number-domain=" 6694"></my-contact>
                             </p>
                             <p class="contactitem">
-                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i><span class="sr-only">Email</span>
                                 <!-- Set data-user and data-domain as your  mail username and domain respectively -->
                                 <my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
                             </p>
@@ -301,9 +311,9 @@ Footer section
 
 
         <!-- Site Map Navigation -->
-        <nav aria-label="Site Map navigation">
+        <nav aria-label="Site Map navigation" id="pagefooterbottom"">
         <div id="footer-sitemap" class="container-fluid">
-            <section id="footer-sitemap" class="container">
+            <section class="container">
                 <ul class="row ">
                     <li class="col-12 col-sm-6 col-md-4"><a href="index.html#top" class="sitemap-header">Home</a>
                         <ul class="footer-sitemap-li">
@@ -343,7 +353,7 @@ Footer section
             </section>
             </div>
         </nav>
- </div>
+
  
  
  
