--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Main Content section
  
             
         <div class="row">
-            <div class="col text-center">
+            <div>
                 <!-- Testimonials -->
                 <h1>Testimonials</h1>
             </div>
@@ -189,7 +189,7 @@ Main Content section
             <!-- Card component  -->
 
         <div class="card-deck " id="testimonials">
-            <div class="col-3">
+            <div class="col-3 col-lg-6">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">I got to know Donovan while volunteering at the Stroke Support Station. And I have worked with him (seen him work) on several occasions. I found Donovan to be a strategic leader that knows how to articulate his thoughts well. A man with few words but a big heart and passion to serve.</p>
@@ -197,7 +197,7 @@ Main Content section
                     </div>
                 </div>
              </div>
-             <div class="col-6">
+             <div class="col-6 col-lg-12">
 
                 <div class="card">
                     <div class="card-body">
@@ -211,7 +211,7 @@ Main Content section
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 col-lg-6 col- ">
                 <div class="card ">
                     <div class="card-body">
                         <p class="card-text">Mr Donovan Lo is an adviser for Lotus Eldercare and I have worked with Mr Lo on several projects to date. Mr Lo works well under pressure and is very approachable and relatable at work. Mr Lo works very well with his superiors and subordinate alike and is well liked by all.  He is very systemic and thorough in problem solving and has a deep sense of responsibility.</p>
@@ -290,7 +290,7 @@ Footer section
                                 <my-contact number-user="+65 9683" number-domain=" 6694"></my-contact>
                             </p>
                             <p class="contactitem">
-                                <i class="fa fa-envelope-o" aria-hidden="true"></i><span class="sr-only">Email</span>
+                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
                                 <!-- Set data-user and data-domain as your  mail username and domain respectively -->
                                 <my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
                             </p>
@@ -344,7 +344,7 @@ Footer section
                             <li><a href="portfolio.html#project-2 ">Project #2</a></li>
                             <li><a href="portfolio.html#project-3 ">Project #3</a></li>
                             <li><a href="portfolio.html#project-4 ">Project #4</a></li>
-                            <li></li>
+                            <br><br>
                             <li class="sitemap-header"><a href="resume.html" class="download-resume">Download Resume</a></li>
                         </ul>
                     </li>
