--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Headers is visible or hidden depending on the size of the browser
             <!-- logo -->
             <a class="navbar-brand img-fluid" href="index.html"><img src="images/donovanlogo150x131.png" /></a>
 
-                <!-- Hamburger -->
+<!-- Hamburger -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                     </button>
                 <!-- Main Navigation -->
@@ -60,7 +60,7 @@ Headers is visible or hidden depending on the size of the browser
                         <li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     </ul>
-               </div>    
+               </div>       
         </div>
     </nav>
 </header>
@@ -86,7 +86,6 @@ Headers is visible or hidden depending on the size of the browser
         </div>
     </nav>
 </header>
-
 
 <!--
 =========================================================================
@@ -189,21 +188,21 @@ Main Content section
             <!-- Card component  -->
 
         <div class="card-deck " id="testimonials">
-            <div class="col-3 col-lg-6">
+            <div class="col-12 col-xm-6 col-md-3 ">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">I got to know Donovan while volunteering at the Stroke Support Station. And I have worked with him (seen him work) on several occasions. I found Donovan to be a strategic leader that knows how to articulate his thoughts well. A man with few words but a big heart and passion to serve.</p>
+                        <p class="card-text">I got to know Donovan while volunteering at the Stroke Support Station. And I have worked with him (seen him work) on several occasions.<br><br> I found Donovan to be a strategic leader that knows how to articulate his thoughts well. A man with few words but a big heart and passion to serve.</p>
                         <p class="cite">- <a href="https://sg.linkedin.com/in/danielyeosp" target="_blank">Daniel Yeo, Founder, Mindful Leadership Program</a></p>
                     </div>
                 </div>
              </div>
-             <div class="col-6 col-lg-12">
+             <div class="col-12 col-xm-12 col-md-6">
 
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">When I first joined Action for AIDS as a programme coordinator about 10 years ago, Mr. Donovan Lo was my immediate reporting superior. He was later promoted to become the executive director, it is commendable for Mr. Lo's way of interacting with the employees and the actions he takes to encourage our team's success.
+                        <p class="card-text">When I first joined Action for AIDS as a programme coordinator about 10 years ago, Mr. Donovan Lo was my immediate reporting superior. He was later promoted to become the executive director, it is commendable for Mr. Lo's way of interacting with the employees and the actions he takes to encourage our team's success.<br><br>
 
-                        As a public health programmer specializing in partnerships and advocacy, I am continually amazed by the skills he possess to navigate in this complex field. He is always willing to mentor on questions related to programme design and the coordination and mobilisation of stakeholders.
+                        As a public health programmer specializing in partnerships and advocacy, I am continually amazed by the skills he possess to navigate in this complex field. He is always willing to mentor on questions related to programme design and the coordination and mobilisation of stakeholders.<br><br>
 
                         During his term as the executive director, Donovan was a key player in the success of the programmes, but his long-term planning have helped paved the way for the organisation to grow, and today we are continue to play an important role in the prevention of new HIV infection, and ultimately the ending of HIV transmission and AIDS in Singapore by 2030.</p>
                         <p class="cite">-Avin Tan, Advocacy and partnerships manager, <br>
@@ -211,10 +210,11 @@ Main Content section
                     </div>
                 </div>
             </div>
-            <div class="col-3 col-lg-6 col- ">
+            <div class="col-12 col-xm-6 col-md-3 ">
                 <div class="card ">
                     <div class="card-body">
-                        <p class="card-text">Mr Donovan Lo is an adviser for Lotus Eldercare and I have worked with Mr Lo on several projects to date. Mr Lo works well under pressure and is very approachable and relatable at work. Mr Lo works very well with his superiors and subordinate alike and is well liked by all.  He is very systemic and thorough in problem solving and has a deep sense of responsibility.</p>
+                        <p class="card-text">Mr Donovan Lo is an adviser for Lotus Eldercare and I have worked with Mr Lo on several projects to date. Mr Lo works well under pressure and is very approachable and relatable at work. <br>
+                        Mr Lo works very well with his superiors and subordinate alike and is well liked by all.  He is very systemic and thorough in problem solving and has a deep sense of responsibility.</p>
                         <p class="cite">-Dr Tan Jit Seng, Director,<br>
                         <a href="https://www.lotuseldercare.com.sg/" target="_blank">Lotus Elder Care</a></p>
                     </div>
