Troubleshoot hamburger, change font-size

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 	<title>Donovan's Portfolio Page</title>
     
     <!-- CSS Reset -->
-    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- CSS -->
-	<link href="styles/main.css" rel="stylesheet" />
+	<link href="css/main.css" rel="stylesheet" />
 
 </head>
 
