Amend font size

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Main Content section
 						<!-- Personality Test Results -->
 						<div class="row">
 							<div class="col">
-								<h1 id="personality-test">Myers–Briggs Type Indicator</h1>
+								<h1 id="personality-test">MBTI Profile</h1>
 								<p></p>
 								<h3>The Architect - INTJ</h3>
 								<p></p>
