Copy common items from home page to resume and portfolio page

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@ Main Content section
 				</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
 		</section>
-	</main><!--
+	</main>
+    
+<!--
 =========================================================================
 Footer section
 =========================================================================
