--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Home Page -->
+<!-- Resume Page -->
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/e62e6f1eeb.js"></script>
     <link href="css/main.css" rel="stylesheet" />
 
 </head>
@@ -38,15 +39,14 @@ Header section
             <!-- Main Navigation -->
             <div class="navbarlink collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
+                    <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="resume.html"><span class="sr-only">(current)</span>Resume</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                 </ul>
             </div>       
         </div>
     </nav>
 </header>
-
 
 
 <!--
@@ -144,143 +144,147 @@ Main Content section
 		</section>
 
 	</main>
-
 <!--
 =========================================================================
 Footer section
 =========================================================================
 -->
-    <footer id="pagefooter">
-        <!-- Pagination component -->
-        <nav aria-label="Page navigation" id="pagenavigation">
-            <ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
-                <li class="page-item ">
-                    <a class="page-link" aria-label="Previous" href="index.html#top">
-                        <span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span> 
-                        <span class="sr-only">Previous</span> <!-- `@@ to edit accordingly for different page -->
-                    </a>
-                </li>
-                <li class="page-item "><a class="page-link" href="index.html#top">1 </a></li>
-                <!-- @@@ to edit accordingly for different page -->
-                <li class="page-item active"><a class="page-link">2 <span class="sr-only">(current)</span></a></li>
-                <li class="page-item"><a class="page-link" href="portfolio.html#top">3 </a></li>
-                <li class="page-item">
-                    <a class="page-link" aria-label="Next" href="portfolio.html#top">
-                        <span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <!-- Contact Me section -->
-        <div id="pagefootermiddle" class="container-fluid">
-            <section>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-sm-4">
-                            <h1>Contact Information</h1>
-                            <p class="contactitem">
-                                <i class="fa fa-phone" aria-hidden="true"></i><span class="sr-only">Mobile</span>
-                                <my-contact number-user="+65 9683" number-domain=" 6694"></my-contact>
-                            </p>
-                            <p class="contactitem">
-                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
-                                <!-- Set data-user and data-domain as your  mail username and domain respectively -->
-                                <my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
-                            </p>
-                            <p class="contactitem">
-                                <i class="fa fa-linkedin" aria-hidden="true"></i><span class="sr-only">LinkedIn</span> <a
-                                    href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
-                            <p class="contactitem">
-                                <i class="fa fa-user-circle-o" aria-hidden="true"></i><span class="sr-only">Profile</span> <a
-                                    href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
-                        </div>
-                        <div class="col-12 col-sm-8">
-                            <h1>Contact Me Form</h1>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
- 
-        <!-- Site Map Navigation -->
-        <nav aria-label="Site Map navigation">
-            <section id="footer-sitemap" class="container">
-                <ul class="row ">
-                    <li class="col-12 col-sm-6 col-md-4"><a href="index.html#top" class="sitemap-header">Home</a>
-                        <ul class="footer-sitemap-li">
-                            <li><a href="index.html#bio">Bio</a></li>
-                            <li><a href="index.html#value-proposition">Value Proposition</a></li>
-                            <li><a href="index.html#motivator">Motivator</a></li>
-                            <li><a href="index.html#interest">Interest</a></li>
-                            <li><a href="index.html#testimonials">Testimonials</a></li>
-                            <li><a href="index.html#membership">Membership</a></li>
-                            <li><a href="index.html#personality-test">Personality Test Result</a></li>
-                        </ul>
-                    </li>
-                    <li class=" col-12 col-sm-6 col-md-4"><a href="resume.html#top" class="sitemap-header">Resume</a>
-                        <ul class="footer-sitemap-li">
-                            <li><a href="resume.html#objective">Objective</a></li>
-                            <li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
-                            <li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
-                            <li><a href="resume.html#education">Education</a></li>
-                            <li><a href="resume.html#skills">Skills</a></li>
-                            <li><a href="resume.html#certificates">Certificates</a></li>
-                            <li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
-                        </ul>
-                    </li>
-                    <li class=" col-12 col-sm-6 col-md-4">
-                        <a href="portfolio.html#top" class="sitemap-header">Portfolio</a>
-                        <ul class=" footer-sitemap-li ">
-                            <li><a href="portfolio.html#project-1 ">Project #1</a></li>
-                            <li><a href="portfolio.html#project-2 ">Project #2</a></li>
-                            <li><a href="portfolio.html#project-3 ">Project #3</a></li>
-                            <li><a href="portfolio.html#project-4 ">Project #4</a></li>
-                            <li></li>
-                            <li class="sitemap-header"><a href="resume.html" class="download-resume">Download Resume</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                 
-            </section>
- 
-        </nav>
- 
- 
- 
- 
-    </footer>
+	<footer id="pagefooter">
+		<!-- Pagination component -->
+		<nav aria-label="Page navigation" id="pagenavigation">
+			<ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
+				<li class="page-item ">
+					<a aria-label="Previous" class="page-link"  href="index.html#top"><span aria-hidden="true"><i aria-hidden="true" class="fa fa-chevron-circle-left"></i></span> <span class="sr-only">Previous</span> <!-- `@@ to edit accordingly for different page --></a>
+				</li>
+				<li class="page-item ">
+					<a class="page-link" href="index.html#top">1 </a>
+				</li><!-- @@@ to edit accordingly for different page -->
+				<li class="page-item active">
+					<a class="page-link"><span class="sr-only">(current)</span>2</a>
+				</li>
+				<li class="page-item">
+					<a class="page-link" href="portfolio.html#top">3</a>
+				</li>
+				<li class="page-item">
+					<a aria-label="Next" class="page-link" href="portfolio.html#top"><span aria-hidden="true"><i aria-hidden="true" class="fa fa-chevron-circle-right"></i></span> <span class="sr-only">Next</span></a>
+				</li>
+			</ul>
+		</nav><!-- Contact Me section -->
+		<div class="container-fluid" id="pagefootermiddle">
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-sm-6">
+							<h1>Contact Information</h1>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-phone-square"> </i><span class="sr-only">Mobile</span> (65) 9683 6694 </p>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-envelope"> </i><span class="sr-only">Email</span> <a href="mailto:donovan.lo@mensa.org.sg">donovan.lo@mensa.org.sg</a></p>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-linkedin"> </i><span class="sr-only">LinkedIn</span> <a href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-user-circle-o"> </i><span class="sr-only">Profile</span> <a href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
+						</div>
+						<div class="col-12 col-sm-6">
+							<h1>Contact Me Form</h1>
+                            <form>
+                                <label for="sname">Name</label><br>
+                                <input type="text" id="sname"><br>
 
+                                <label for="sname">Message</label><br>
+                                <textarea id="smessage">
 
+                                </textarea><br>
+                                <button id="submit">Send</button>
+                                
+                            </form>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div><!-- Site Map Navigation -->
+		<nav aria-label="Site Map navigation" id="pagefooterbottom">
+			<div class="container-fluid" id="footer-sitemap">
+				<section class="container">
+					<ul class="row">
+						<li class="col-12 col-sm-6 col-md-4">
+							<a class="sitemap-header" href="index.html#top">Home</a>
+							<ul class="footer-sitemap-li">
+								<li>
+									<a href="index.html#bio">Bio</a>
+								</li>
+								<li>
+									<a href="index.html#value-proposition">Value Proposition</a>
+								</li>
+								<li>
+									<a href="index.html#motivator">Motivator</a>
+								</li>
+								<li>
+									<a href="index.html#interest">Interest</a>
+								</li>
+								<li>
+									<a href="index.html#testimonials">Testimonials</a>
+								</li>
+								<li>
+									<a href="index.html#membership">Membership</a>
+								</li>
+								<li>
+									<a href="index.html#personality-test">Personality Test Result</a>
+								</li>
+							</ul>
+						</li>
+						<li class=" col-12 col-sm-6 col-md-4">
+							<a class="sitemap-header" href="resume.html#top">Resume</a>
+							<ul class="footer-sitemap-li">
+								<li>
+									<a href="resume.html#objective">Objective</a>
+								</li>
+								<li>
+									<a href="resume.html#relevant-summary">Relevant Skills</a>
+								</li>
+								<li>
+									<a href="resume.html#past-working-experience">Past Working Experience</a>
+								</li>
+								<li>
+									<a href="resume.html#education">Education</a>
+								</li>
+								<li>
+									<a href="resume.html#skills">Skills</a>
+								</li>
+								<li>
+									<a href="resume.html#certificates">Certificates</a>
+								</li>
+								<li>
+									<a href="resume.html#volunteering-experience">Volunteering Experience</a>
+								</li>
+							</ul>
+						</li>
+						<li class=" col-12 col-sm-6 col-md-4">
+							<a class="sitemap-header" href="portfolio.html#top">Portfolio</a>
+							<ul class=" footer-sitemap-li">
+								<li>
+									<a href="portfolio.html#project-1">Project #1</a>
+								</li>
+								<li>
+									<a href="portfolio.html#project-2">Project #2</a>
+								</li>
+								<li>
+									<a href="portfolio.html#project-3">Project #3</a>
+								</li>
+								<li>
+									<a href="portfolio.html#project-4">Project #4</a>
+								</li>
+								<li style="list-style: none"><br>
+								<br></li>
+								<li class="sitemap-header">
+									<a class="download-resume" href="resume.html">Download Resume</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+			</div>
+		</nav>
+	</footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<!-- Bootstrap CSS -->
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
-</body>
-
+    <script scr="main.js"></script>
+  
+  </body>
 </html>
+  
