Link to pdf resume

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Footer section
 								<li style="list-style: none"><br>
 								<br></li>
 								<li class="sitemap-header">
-									<a class="download-resume" href="resume.html">Download Resume</a>
+									<a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
 								</li>
 							</ul>
 						</li>
