--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,8 @@ Main Content section
          <h1>Portfolio</h1>
         
             <div class="container">
-            <div class="card-deck">
-                <div class="card">
+            <div class="card-deck row">
+                <div class="card col-12 col-md-6">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-1"></a>Project 001</h5>
@@ -76,7 +76,7 @@ Main Content section
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-12 col-md-6">
                     <img src="images/sample2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-2"></a>Project 002</h5>
@@ -84,7 +84,9 @@ Main Content section
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-                <div class="card">
+            </div>
+            <div class="row">
+                    <div class="card col-12 col-md-6">
                     <img src="images/sample3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-3"></a>Project 003</h5>
@@ -92,7 +94,7 @@ Main Content section
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-12 col-md-6">
                     <img src="images/sample4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title"><a id="project-4"></a>Project 004</h5>
@@ -256,7 +258,7 @@ Footer section
 								<li style="list-style: none"><br>
 								<br></li>
 								<li class="sitemap-header">
-									<a class="download-resume" href="resume.html">Download Resume</a>
+									<a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
 								</li>
 							</ul>
 						</li>
