--- a/resume.html
+++ b/resume.html
@@ -134,8 +134,7 @@ Main Content section
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6" id="download-resume">
-                        <h1>Download</h1>
-                        <p> printer friendly resume</p>
+                        <a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
                     </div>
                 </div>
             </div>
@@ -273,7 +272,7 @@ Footer section
 								<li style="list-style: none"><br>
 								<br></li>
 								<li class="sitemap-header">
-									<a class="download-resume" href="resume.html">Download Resume</a>
+									<a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
 								</li>
 							</ul>
 						</li>
