Cosmetic minor changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Header section
 <header id="pageheader" >
     <a id="top"></a>
     <!-- Navbar component -->
-    <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
+    <nav class="navbar navbar-expand-md navbar-dark xs-dark">
         <div class="container">
             <!-- logo -->
             <a class="navbar-brand img-fluid" href="index.html"><img src="images/donovanlogo150x131.png" class="d-none d-xl-block"><img src="images/donovanlogo200x70.png" class="d-block d-xl-none"/></a>
@@ -62,24 +62,24 @@ Main Content section
 			<div class="container">
 				<div class="row justify-content-center">
 					
-                    <div class="hero-text d-none d-xl-block">
+                    <div class="hero-text d-none d-lg-block">
 						<p class="title2">Hello, I'm</p>
 						<p class="title1">Donovan</p>
 						<p class="title2">Web Developer</p>
 						<hr class="title2">
 						<p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Employ Me</a></p>
 					</div>
-					<div class="hero-image d-none d-xl-block"><img src="images/donovan343x500.png"></div>
+					<div class="hero-image d-none d-lg-block"><img src="images/donovan343x500.png"></div>
 
                     
-					<div class="hero-text-md d-block d-xl-none">
+					<div class="hero-text-md d-block d-lg-none">
 						<p class="title2-md">Hello, I'm</p>
 						<p class="title1-md">Donovan</p>
 						<p class="title2-md">Web Developer</p>
 						<hr class="title2-md">
 						<p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Employ Me</a></p>
 					</div>
-					<div class="hero-image-md d-block d-xl-none"><img src="images/donovan343x500.png"></div>
+					<div class="hero-image-md d-block d-lg-none"><img src="images/donovan343x500.png"></div>
 
 				</div>
 			</div>
