--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@ Header section
 <header id="pageheader" >
     <a id="top"></a>
     <!-- Navbar component -->
-    <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
+    <nav class="navbar navbar-expand-md navbar-light xs-light" >
         <div class="container">
             <!-- logo -->
             <a class="navbar-brand img-fluid" href="index.html"><img src="images/donovanlogo150x131.png" class="d-none d-xl-block"><img src="images/donovanlogo200x70.png" class="d-block d-xl-none"/></a>
