--- a/index.html
+++ b/index.html
@@ -90,7 +90,27 @@ Main Content section
 					<div class="col-12 col-md-8 order-md-1">
 						<!-- Intro / Bio -->
 						<h1 id="bio">Bio</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>
+                            I am always challenging myself to find a better way to getting things done. I believe that there are great potential in every individual; I enjoy helping others to move forward, grow, and reach their fullest potential. I disagee with others description of me as a perfectionist, I just take pride in my work.
+                        </p>
+                        <p>
+                            Although I'm IT by training and starting off my career in IT sector. Life has taken me in another direction. I join the nonprofit sector for more than a decade ago. As an independent, self-initiated person, I undertook complex assignments, met deadlines and delivered.
+                        </p>
+                        <p>
+                            With my IT background and being open to ideas, I was able to find and understand the logical connections between them. I have an efficient perception of reality, and together with strong analytical skills, I am able to solve problems systematically, identify needs, and develop innovative strategies for long term sustainable programmes supported with the  best evidence and practice.
+                        </p>
+                        <p>
+                            I have gained experience in the variety of projects I involved. I have started an organisation from scratch, led teams and grown their capabilities. I have set up strategic directions, developed business models, operationalised work processes and overseen different programmes targeting different groups. I have collaborated with ministries, statutory boards, corporations and non-profit groups to facilitate the successful delivery of these programmes.
+                        </p>
+                        <p>
+                            I advanced my career, led teams, achieve things I never thought I am able to. I led an interesting and exciting career life, going places, meeting people from different sectors and across the globe.
+                        </p>
+                        <p>
+                            It was a face-paced career progression, leaving me no time to do the things I like: software development. Life has changed me, unlike the time I left the IT sector as just a coder, I came back, packed with real world hands on experience in different areas, like accounting and business workflow, 
+                        </p>
+                        <p>
+                            Equipped with  the new knowledge of the new technologies, it's another challenge for myself, to look for my childhood dreams, to see how far I can go in software development.
+                        </p>
 					</div>
 					<div class="col-12 col-md-8 order-md-2">
 						<!--- Value Proposition -->
