--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Main Content section
 					
                     <div class="hero-text d-none d-lg-block">
 						<p class="title2">Hello, I'm</p>
-						<p class="title1">Donovan</p>
+						<p class="title1">Donovan Lo</p>
 						<p class="title2">Web Developer</p>
 						<hr class="title2">
 						<p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Employ Me</a></p>
