Align site map's download resume link

--- a/index.html
+++ b/index.html
@@ -333,12 +333,15 @@ Footer section
 								<li>
 									<a href="portfolio.html#project-4">Project #4</a>
 								</li>
-								<li style="list-style: none"><br>
-								<br></li>
-								<li class="sitemap-header">
-									<a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
-								</li>
-							</ul>
+								
+                            </ul>
+                            <br>
+                            <br>
+
+
+							<a class="sitemap-header download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
+
+
 						</li>
 					</ul>
 				</section>
