Edit navbar's font-size for resume and portfolio page

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@ Header section
 <header id="pageheader" >
     <a id="top"></a>
     <!-- Navbar component -->
-    <nav class="navbar navbar-expand-md navbar-light xs-light" >
+    <nav class="navbar navbar-expand-md navbar-dark xs-dark">
         <div class="container">
             <!-- logo -->
             <a class="navbar-brand img-fluid" href="index.html"><img src="images/donovanlogo150x131.png" class="d-none d-xl-block"><img src="images/donovanlogo200x70.png" class="d-block d-xl-none"/></a>
@@ -40,7 +40,7 @@ Header section
             <div class="navbarlink collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="resume.html"><span class="sr-only">(current)</span>Resume</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                 </ul>
             </div>       
