Seperate bio into 2 parts and use collapse component to hide second part

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@ Main Content section
                         <p>
                             With my IT background and being open to ideas, I was able to find and understand the logical connections between them. I have an efficient perception of reality, and together with strong analytical skills, I am able to solve problems systematically, identify needs, and develop innovative strategies for long term sustainable programmes supported with the  best evidence and practice.
                         </p>
+                        <div class="collapse  multi-collapse show" id="readmorelink">
+                        
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="readmorelink readmore">Read more...</button>
+                        </div>
+                        <div class="collapse multi-collapse" id="readmore">
                         <p>
                             I have gained experience in the variety of projects I involved. I have started an organisation from scratch, led teams and grown their capabilities. I have set up strategic directions, developed business models, operationalised work processes and overseen different programmes targeting different groups. I have collaborated with ministries, statutory boards, corporations and non-profit groups to facilitate the successful delivery of these programmes.
                         </p>
@@ -111,6 +116,7 @@ Main Content section
                         <p>
                             Equipped with  the new knowledge of the new technologies, it's another challenge for myself, to look for my childhood dreams, to see how far I can go in software development.
                         </p>
+                        </div>
 					</div>
 					<div class="col-12 col-md-8 order-md-2">
 						<!--- Value Proposition -->
