--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@ Footer section
 				</li>
 			</ul>
 		</nav><!-- Contact Me section -->
-		<div class="container-fluid" id="pagefootermiddle">
+		<div class="container-fluid " id="pagefootermiddle">
 			<section>
-				<div class="container">
-					<div class="row">
-						<div class="col-12 col-sm-6">
+				<div class="container ">
+					<div class="row justify-content-center ">
+						<div class="col-12 col-sm-6 align-items-stretch ">
 							<h1>Contact Information</h1>
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-phone-square"> </i><span class="sr-only">Mobile</span> (65) 9683 6694 </p>
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-envelope"> </i><span class="sr-only">Email</span> <a href="mailto:donovan.lo@mensa.org.sg">donovan.lo@mensa.org.sg</a></p>
@@ -247,23 +247,34 @@ Footer section
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-user-circle-o"> </i><span class="sr-only">Profile</span> <a href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
 						</div>
 						<div class="col-12 col-sm-6">
-							<h1>Contact Me Form</h1>
-                            <form>
-                                <label for="sname">Name</label><br>
-                                <input type="text" id="sname"><br>
-
-                                <label for="sname">Message</label><br>
-                                <textarea id="smessage">
-
-                                </textarea><br>
-                                <button id="submit">Send</button>
-                                
-                            </form>
-						</div>
+                            <h1>Contact Form</h1>
+                            <div class="container">
+                                <form >
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label" for="sendername">Name</label>
+                                        <div class="col-sm-10">
+                                            <input class="form-control" id="sendername" placeholder="Enter Name" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label" for="senderemail">Email</label>
+                                        <div class="col-sm-10">
+                                            <input class="form-control" id="senderemail" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label" for="sendermessage">Message</label>
+                                        <div class="col-sm-10">
+                                            <textarea class="form-control" id="sendermessage" rows="3"></textarea>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>  
 					</div>
 				</div>
 			</section>
-		</div><!-- Site Map Navigation -->
+        </div><!-- Site Map Navigation -->
 		<nav aria-label="Site Map navigation" id="pagefooterbottom">
 			<div class="container-fluid" id="footer-sitemap">
 				<section class="container">
