--- a/index.html
+++ b/index.html
@@ -249,7 +249,10 @@ Footer section
 						<div class="col-12 col-lg-6">
                             <h1>Contact Form</h1>
                             <div class="container">
-                                <form >
+                                <form action="https://api.elasticemail.com/v2/email/send" method="post">
+                                    <input type="hidden" name="apikey" value="9AE2E1240D851D95446D75806C226044C407CED61B4F57700A95BAEFFF23F0A5FC2FFC32BC68782501954769A24DA65F">
+                                    <input type="hidden" name="subject" value="From online form at www.donovanlo.sg">
+                                    <input type="hidden" name="to" value="donovan.lo@mensa.org.sg" >
                                     <div class="form-group row">
                                         <label class="col-sm-2 col-form-label text-right" for="sendername">Name</label>
                                         <div class="col-sm-10">
@@ -257,15 +260,15 @@ Footer section
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label class="col-sm-2 col-form-label text-right" for="senderemail">Email</label>
+                                        <label class="col-sm-2 col-form-label text-right" for="from">Email</label>
                                         <div class="col-sm-10">
-                                            <input class="form-control" id="senderemail" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
+                                            <input class="form-control" id="from" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label class="col-sm-2 col-form-label text-right" for="sendermessage">Message</label>
+                                        <label class="col-sm-2 col-form-label text-right" for="bodyHtml">Message</label>
                                         <div class="col-sm-10">
-                                            <textarea class="form-control" id="sendermessage" rows="3"></textarea>
+                                            <textarea class="form-control" id="bodyHtml" rows="3"></textarea>
                                         </div>
                                     </div>
                                 </form>
