Copy page footer codes to Resume and Portfolio page

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ Footer section
 					<a aria-label="Next" class="page-link" href="resume.html#top"><span aria-hidden="true"><i aria-hidden="true" class="fa fa-chevron-circle-right"></i></span> <span class="sr-only">Next</span></a>
 				</li>
 			</ul>
-		</nav><!-- Contact Me section -->
+		</nav>
+        <!-- Contact Me section -->
 		<div class="container-fluid " id="pagefootermiddle">
 			<section>
 				<div class="container ">
@@ -274,7 +275,7 @@ Footer section
                                     </div>
                                     <div class="form-group row text-center">
                                         <div class="col-12">
-                                          <button type="submit" class="btn btn-primary">Send</button>
+                                          <button id="submitform" type="submit" class="btn btn-primary">Send</button>
                                         </div>
                                     </div>
                                 </form>
@@ -370,7 +371,7 @@ Footer section
 			</div>
 		</nav>
 	</footer>
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script scr="main.js"></script>
   
   </body>
