Edit download section in resume page

--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,10 @@ Main Content section
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6" id="download-resume">
-                        <a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a>
+                        <h1>Download</h1>
+                        <ul>
+                            <li><a class="download-resume" target="_blank" href="documents/DonovanResume.pdf">Download Resume</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
